--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -1,8 +1,3 @@
-html {
-  font-family: "Roboto Mono", monospace;
-  overflow: hidden;
-}
-
 header {
   display: flex;
   flex-direction: row;
@@ -15,6 +10,20 @@ header {
   width: 100%;
   height: 8vh;
   padding-right: 15px;
+}
+
+body {
+  font-family: "Roboto Mono", monospace;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #1a1a1a;
+  color: #f4f4f4;
+  margin: 0;
+  padding: 0;
+  height: 100vh;
 }
 
 header .menu {
@@ -35,46 +44,41 @@ header .menu-button {
   cursor: pointer;
 }
 
-body {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: #1a1a1a;
-  color: #f4f4f4;
-  margin: 0;
-  padding: 0;
-  height: 100vh;
-}
-
-body .clock {
+main {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-body .time {
+main .clock {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+main .time {
   font-size: 100px;
   color: #f4f4f4;
   margin-bottom: 25px;
 }
 
-body .date {
+main .date {
   font-size: 15px;
   margin-top: 10px;
 }
 
-body .timezone {
+main .timezone {
   font-size: 15px;
   margin-bottom: 25px;
 }
 
-body .apero-status {
+main .apero-status {
   display: none;
 }
 
-body p {
+main p {
   margin: 4px;
 }
 
@@ -132,7 +136,6 @@ footer .bmac-link {
 }
 
 button {
-  font-family: "Roboto Mono", monospace;
   padding: 15px 15px;
   background-color: #1a1a1a;
   color: #f4f4f4;
